# walley-backend

./: CMakeLists.txt  README.md
cmake/: generate_clang_complete.cmake  use_boost.cmake  use_cryptopp.cmake
docs/: CMakeLists.txt  Doxyfile.in
src/: CMakeLists.txt  aes.cpp  aes.hpp  auxiliary.cpp  auxiliary.hpp  base64.cpp  base64.hpp  walley.cpp  walley.hpp
